fixed contrast issue

--- a/css/sass/_blacklib.scss
+++ b/css/sass/_blacklib.scss
@@ -269,13 +269,13 @@ div.exhibit-description div#black-life{
     div.narrative-heading{
         float: left;
         display: inline-block;
-        padding: 10px;
+        padding: 0 2em 2em 2em;
         width: 50%;
         min-width: 300px;
         max-width: 500px;
         height: 390px; 
         @media screen and (max-width: 975px){
-            height: 500px;
+            height: 550px;
         }
         p {
             font-size: .8 * $base-font-size;
