--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -23,8 +23,8 @@ $color-primary: #292b39;
 $color-contrast: #ee5140;
 $color-dark: #040404;
 
-$color-hover-background: lighten($color-primary, 20%);
-$color-hover-foreground: lighten($color-contrast, 20%);
+$color-hover-background: lighten($color-primary, 15%);
+$color-hover-foreground: lighten($color-primary, 60%);
 
 @import "screen";
 @import "blacklib";
